@@ -16,6 +16,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Bugfix when sending an item to another MC, the 'time' of the event was the 'time' of the last event, if resulting item
   was deleted then item was sent again, it used wrong 'time', now it uses the correct current time
 - Added boolean field Meeting.extraordinarySession, informational field useable when necessary
+- When using WF adaptations 'hide_decisions_when_under_writing', do not only show the decision to MeetingManagers but to
+  every users able to edit the item, this way, used together with WF adaptation 'return_to_proposing_group', the decision
+  is viewable by users that will correct the item
 
 3.3 (2015-02-27)
 ----------------
